# simple-kafka-producer

./: .flake8  .gitignore  Makefile  README.md  conftest.py  pyproject.toml  pytest.ini
kafka_producer/: producer.py
layers/: decorators.py
tests/unit/: test_kafka_producer.py
